--- a/index/02-chap2.Rmd
+++ b/index/02-chap2.Rmd
@@ -55,7 +55,7 @@ Various studies have found a link between adiposity and cardiovascular risk thro
 There is extensive evidence that higher BMI causes hypertension and T2D, which contribute to the increased risk of a heart attack or a stroke. As well as this, studies which have explored the molecular footprint of adiposity have tended to focus on the lipidome, such as cholesterol and triglycerides in lipoprotein subtypes, including low-density lipoproteins (LDL), very-low-density lipoproteins (VLDL) and high-density lipoproteins (HDL) [@Bell2018a; @Wurtz2014], where a higher BMI is associated with an increase in LDLs and a decrease in large HDLs. This has been explored in a causal framework. Over time, LDLs retain in the arterial intima, which leads to an immuno-inflammatory response and development of atherosclerotic plaques. As these plaques develop, they become unstable and can rupture, thereby causing a myocardial infarction or ischaemic stroke [@Ference2017]. LDLs are therefore an important example of circulating molecules which are causally related to both BMI and disease risk. Although LDLs are important in mediating the increased risk of CHD [@Lu2014], this does not account for all the risk. Therefore, it is likely that there are other factors mediating this association.
 
 ## Platelets are key cells in thrombosis - par1-ap thrombin etc - add inside out signalling
-Platelets are anucleate cells which are generated from megakaryocytes in the bone marrow. Platelets are one of the key cells involved in haemostasis [@Rivera2009]. Under normal conditions, the endothelium releases nitric oxide (NO) and prostaglandin I2 (PGI2) which suppress platelet activation [@Yau2015]. When the endothelium is damaged, platelets adhere to the injured vessel wall through the glycoprotein Ib-IX-V (GPIb-IX-V) receptor and the glycoprotein VI (GPVI) collagen receptor. As a result, platelets secrete alpha and dense granules and undergo shape change [@Badimon2012]. Alpha granules release growth factors (e.g. IGF-1), clotting factors and chemokines [@Gear2003], whereas dense granules release molecules such as ADP, which further activate platelets by interacting with the P2Y1 and P2Y12 platelet receptors. Integrins are heterodimeric transmembrane glycoprotein complexes, which are important in platelet activation [@Durrant2017a]. Binding of agonists such as thrombin (or the synthetic peptide agonist PAR1-AP/TRAP-6) to the protease-activated receptor 1 (PAR-1AP) (\@ref(fig:platelet-activation)) results in activation of the integrin α~IIb~β~3~. This is known as inside-out signalling. Here, inositol trisphosphate (IP3) and diacylglycerol are generated, which leads to an increase in cytosolic calcium (Ca^2+^). This in turn activates CALDAG-GEF1 as well as protein kinase C (PKC) [@Mehrbod2013]. The small GTPase, Rap1 is then activated which recruits proteins such as talin and kindlin [@Durrant2017] Subsequent fibrinogen binding results in platelet aggregation, thrombus formation and cessation of bleeding [@Rivera2009]. These key platelet receptors are indicated in figure \@ref(fig:platelet-activation). Despite these processes being essential for haemostasis, when platelets become hyperactive, the balance is tipped in favour of thrombosis.
+Platelets are anucleate cells which are generated from megakaryocytes in the bone marrow. Platelets are one of the key cells involved in haemostasis [@Rivera2009]. Under normal conditions, the endothelium releases nitric oxide (NO) and prostaglandin I2 (PGI2) which suppress platelet activation [@Yau2015]. When the endothelium is damaged, platelets adhere to the injured vessel wall through the glycoprotein Ib-IX-V (GPIb-IX-V) receptor and the glycoprotein VI (GPVI) collagen receptor. As a result, platelets secrete alpha and dense granules and undergo shape change [@Badimon2012]. Alpha granules release growth factors (e.g. IGF-1), clotting factors and chemokines [@Gear2003], whereas dense granules release molecules such as ADP, which further activate platelets by interacting with the P2Y1 and P2Y12 platelet receptors. Integrins are heterodimeric transmembrane glycoprotein complexes, which are important in platelet activation [@Durrant2017a]. Binding of agonists such as thrombin (or the synthetic peptide agonist PAR1-AP/TRAP-6) to the protease-activated receptor 1 (PAR-1AP) (\@ref(fig:platelet-activation)) results in activation of the integrin α~IIb~β~3~. This is known as inside-out signalling. Here, inositol trisphosphate (IP3) and diacylglycerol are generated, which leads to an increase in cytosolic calcium (Ca^2+^). This in turn activates CALDAG-GEF1 as well as protein kinase C (PKC) [@Mehrbod2013]. The small GTPase, Rap1 is then activated which recruits proteins such as talin and kindlin [@Durrant2017]. Subsequent fibrinogen binding results in platelet aggregation, thrombus formation and cessation of bleeding [@Rivera2009]. These key platelet receptors are indicated in figure \@ref(fig:platelet-activation). Despite these processes being essential for haemostasis, when platelets become hyperactive, the balance is tipped in favour of thrombosis.
 
 ```{r platelet-activation, echo = FALSE, fig.cap="Key platelet receptors for platelet activation"}
 include_graphics(path = "figure/Intro_background/Platelet_activation.png", dpi = NA)
@@ -88,7 +88,10 @@ include_graphics(path = "figure/Intro_background/Sysmex_IPF.png", dpi = NA)
 It is not fully understood how a high BMI might lead to changes in platelet function. Obesity commonly presents with a state of low-grade chronic inflammation, characterised by increases in interleukin-6 (IL-6) and tumour necrosis factor-α (TNF-α) [@Esser2014]. There are two types of fat: white adipose tissue (WAT) and brown adipose tissue (BAT). WAT secretes proteins and peptides which have pro-inflammatory effects [@Cercato2019; @Kern2001]. Previous studies have identified a causal link between higher BMI and higher circulating levels of the inflammatory molecule C-reactive protein (CRP) [@Timpson2011]. More recent studies have used MR and have found an effect of BMI on a range of cytokines [@Kalaoja2021]. It is likely that the composition of inflammatory molecules may have downstream effects on platelets.
 
 ## Platelet primers
-Platelets express receptors for various circulating proteins. Previous studies have reported that a range of soluble ligands, growth factors and cytokines which can enhance platelet function are elevated in obesity. These ‘platelet primers’ include insulin-like growth factor-1 (IGF-1) [@Frystyk1995] and thrombopoietin (TPO) [@Maury2010a; @Blair2015]. There is evidence that other chemokines may be able to activate platelets. The CCR4 receptor is activated by the chemokines macrophage derived chemokine (MDC/CCL22) and thymus and activation-regulated chemokine (TARC/CCL17) [@Kowalska2000; @Abi-Younes2001]. There is observational evidence that higher BMI increases the circulating levels of MDC [@Kitahara2014]. These chemokines are important for chemotaxis of leukocytes. It has also been observed that these chemokines can activate platelets, inducing aggregation and calcium mobilisation [@Abi-Younes2001]. It is unclear how these chemokines are able to exert effects. Known platelet primers (e.g. TPO) potentiate platelet activation through activation of the lipid kinase phosphoinositide-3-kinase (PI3K) pathway [@Blair2015; @Pasquet2000]. In turn, this leads to phosphorylation and activation of protein kinase B (PKB/Akt) and an increase in aggregation [@Hemmings2015]. Another pathway which is important for platelet priming is the mitogen activated protein kinase (MAPK) pathway, in particular, the extracellular related kinases (ERKs) [@Ezumi1998]. It is possible that these pathways are also important in signalling via CCR4.
+Platelets express receptors for various circulating proteins. Previous studies have reported that a range of soluble ligands, growth factors and cytokines which can enhance platelet function are elevated in obesity. These ‘platelet primers’ include insulin-like growth factor-1 (IGF-1) [@Frystyk1995] and thrombopoietin (TPO) [@Maury2010a; @Blair2015]. There is evidence that other chemokines may be able to activate platelets. The CCR4 receptor is activated by the chemokines macrophage derived chemokine (MDC/CCL22) and thymus and activation-regulated chemokine (TARC/CCL17) [@Kowalska2000; @Abi-Younes2001]. There is observational evidence that higher BMI increases the circulating levels of MDC [@Kitahara2014]. These chemokines are important for chemotaxis of leukocytes. It has also been observed that these chemokines can activate platelets, inducing aggregation and calcium mobilisation [@Abi-Younes2001]. It is unclear how these chemokines are able to exert effects. Known platelet primers (e.g. TPO) potentiate platelet activation through activation of the lipid kinase phosphoinositide-3-kinase (PI3K) pathway [@Blair2015; @Pasquet2000]. In turn, this leads to phosphorylation and activation of protein kinase B (PKB/Akt) and an increase in aggregation [@Hemmings2015]. Another pathway which is important for platelet priming is the mitogen activated protein kinase (MAPK) pathway, in particular, the extracellular related kinases (ERKs) [@Ezumi1998]. It is possible that these pathways are also important in signalling via CCR4. 
+
+## The role of circulating platelet primers and disease
+Recent studies have used large cohorts of people to identify SNPs which are associated with changes in levels of certain proteins. These are known as protein Quantitative Trait Loci (pQTL) [@Sun2018]. Sun et al. identified 1,927 genetic associations with 1,478 proteins. As a result of these pQTLs, there have been numerous studies that have been able to estimate causal effects of proteins in disease by using two sample MR. For a two sample MR, the exposure are measured in a separate cohort from the cohort of the outcome. An example of this is linking the interleukin-6 receptor (IL6R) to diseases such as rheumatoid arthritis and coronary artery disease [@Bretherick2020]. The chemokines MDC and TARC both have SNPs which are associated with their levels. MDC and TARC have been implicated in platelet hyperactivity, however it is important to explore whether raised levels of MDC and TARC would have clinical implications such as a role in ischaemic heart disease. As a polymorphism in the CCR4 receptor has been implicated in myocardial infarction [@Noori2018], it is important to see how raised levels of MDC and TARC would relate to cardiovascular disease outcomes. 
 
 ## Evaluating the plasma proteome may reveal mechanistic insight into obesity-related diseases
 Through literature searches, there is evidence for an association between BMI and chemokines [@Kitahara2014]. Many studies so far have had hypothesis driven approaches when looking at the effect of BMI on circulating protein levels [@Timpson2011]. This is due to the often limited range of protein detection assays, such as enzyme-linked immunosorbent assays (ELISAs). Downstream health outcomes as a result of higher BMI are likely to occur as a result of a global change in protein composition, rather than as a result of individual proteins. Recent technologies have now been developed which allow protein detection in unprecedented scope and detail, for example the SOMAscan by SomaLogic [@Gold2012], which can detect around 4000 unique proteins. Studies that have attempted to characterise the plasmsa proteome of higher BMI have often only been in an observational framework [@Cominetti2018]. As the majority of druggable targets are proteins, it is valuable to explore the effects of BMI on circulating plasma proteins. It is estimated that 25% of proteins in the human proteome circulate in the blood [@Imming2006], including enzymes, protein kinases and transport proteins. Therefore, focusing on effects of adiposity on the circulating proteome may allow for the development of or repurposing of therapeutic interventions to reduce obesity-related disease.
@@ -96,18 +99,24 @@ Through literature searches, there is evidence for an association between BMI an
 ## Importance of interdisciplinary methods
 Each experimental approach used when trying to answer hypotheses has biases and limitations. For example, using basic science it is possible to determine effects _in vitro_ or _ex vivo_, however it is difficult to fully understand how findings might translate in a clinical setting. Similarly, observational studies can provide useful clinical information, but these can generally only be used to identify correlation, not causation. Randomised control trials (RCTs) are considered the gold standard way to determine efficacy and causality, especially in drug trials, however these trials are often time consuming and expensive [@Bennett2017]. To overcome this issue, MR utilises genetic information to be able to provide causal estimates. MR is widely utilised since the cost of sequencing genomes has become more affordable. Therefore, a combination of laboratory experiments, observational clinical studies, RCTs and MR can therefore help to provide separate sources of evidence in investigating mechanisms of disease.
 
-
-Other things to cover:
-- MR, genetic risk scores, RCTs - how much depth to go into?
-- 
-
-
-
-## Interdisciplinary methods - MR, RCTs, lab work
-
 ## Cohorts utilised within the thesis
+This thesis approaches the hypotheses with a combination of approaches mentioned in the previous paragraph. These include the INTERVAL study, DiRECT, lab work, patient study. The studies will be introduced more thoroughly in the respective results chapter.
 
 ## Aims
+The aims for the thesis therefore set out to try to address these current gaps in the literature.
+
+1)
+2)
+3)
+
+## Results chapter
+
+1) Chapter 
+2) Chapter 
+3) Chapter
+4) Chapter
+5) Chapter
+6) \@ref(Appendix-A) A - Exploring nonlinear associations between body mass index and plasma proteins 
 
 
 
