--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -70,6 +70,8 @@ Chapter 6
 - These chemokines were measured within Chapter 7 - there was evidence for an association between BMI and MDC, and weak evidence for a causal effect (p=0.07). This did not pass multiple testing correction. It would be beneficial to look at these chemokines in other cohorts. In the DiRECT analysis, there was weak evidence that a reduction in weight reduces levels of MDC (p=0.06). Again, this did not pass multiple testing. The agreement in direction across the two studies (raised with higher BMI and reduced with weight loss), suggests that this effect could be real, however it may be a relatively small effect which may require more targeted proteomics. The effects were smaller for TARC, suggesting that if these effects are real, body mass index has a larger effect on MDC levels.
 
 Chapter 7
+The analyses in Chapter \@ref(BMI-protein-MR) provided evidence for a causal effect of BMI on a range of proteins. However, linear MR may not always be the most appropriate as there are often nonlinear relationships, for example between BMI and mortality, where there is a J-shaped relationship [@Sun2019]. Most studies have implemented linear models when looking at the effect of BMI on proteins/metabolites, however these relationships should be re-examined for nonlinearity. Methods to do this are currently available, but they are not easily implementable on a large scale, such as when there are thousands of protein outcomes. Current methods such as the nlmr R package do not allow the user to define their bounds of their strata and therefore makes it difficult to interpret results. The glsmr package was developed to allow to do so and therefore provide estimates for causal effects in the predefined ranges of the exposure such as BMI. More detail is provided in the Appendix \@ref(Appendix-A), with an example using the effect of BMI on levels of leptin. Stratifying MR estimates reduces the power and therefore creates more imprecise estimates. Furthermore, when looking at the effects of obesity at the upper end of the distribution (e.g. BMI range of 40-60 kg/m^2^, there are fewer participants and therefore amplifying the same power issue. As a result, larger sample sizes would be needed with oversampling at the ends of the distributions to ensure sufficient power in each stratum. 
+
 - Recent data suggested nonlinearity with metabolites, preliminary analyses have suggested that effects may be nonlinear (Add a Figure as an appendix - use example of BMI and CRP).
 
 Chapter 8
