--- a/index/10-appendix.Rmd
+++ b/index/10-appendix.Rmd
@@ -33,7 +33,7 @@ If you feel it necessary to include an appendix, it goes here.
 ```{r, echo=FALSE, message=FALSE}
 source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/packages.R")
 ```
-# Exploring nonlinear associations between body mass index and plasma proteins
+# Exploring nonlinear associations between body mass index and plasma proteins {#Appendix-A}
 This appendix contains an example of nonlinearity occurring for the association between body mass index (BMI) and levels of certain plasma proteins within the INTERVAL dataset. This analysis was performed as a result of an observation within the group and from published data [@Li2021] that the effect of BMI on certain circulating metabolites such as LDL-C may be nonlinear. Therefore it is likely that this is also the case with proteins: biologically, proteins might reach a threshold and therefore increasing BMI may lead to a plateau in the levels of the protein. Alternatively, certain technologies may reach a maximum in detection. The SomaLogic platform has a wide range of detection from femtomolar to micromolar, therefore this should be less of an issue. This possible nonlinear relationship has not been accounted for in the linear models and Mendelian ramdomisation analyses performed in Chapter \@ref(BMI-protein-MR). Nonlinearity may also explain why some proteins may be altered as a result of high BMI in the MR, but caloric restriction may not alter the levels of the same protein. There may be a certain BMI that needs to be reached before protein levels are altered therefore in DiRECT, as BMI remains in the obese category, effects may not be seen. Exploring nonlinearity is ongoing, but this appendix provides an example of the possible nonlinear relationship between BMI (in kg/m^2^ so that it is biologically meaningful and effects can be related back to the NHS BMI categories) and levels of leptin. 
 
 ## Observational association between BMI and leptin 
@@ -63,6 +63,7 @@ The nonlinear MR package ("nlmr") can also be utilised which uses two methods: f
 include_graphics(path = "figure/Appendix/leptin_nlmr_fracpoly_piecewise.pdf", dpi = NA)
 ```
 
+## GAM and linear stratified MR (GLSMR)
 The issue with these methods is that it isn't possible to estimate the effect of a certain range of BMI on protein levels. This is important to be able to understand the range of BMIs where certain effects on proteins are likely to occur. Therefore the package "glsmr" was created within the group by David Hughes. This package enables estimates to be derived for the effect of the exposure on the outcome for specified ranges in the exposure, using both observational associations and using Mendelian randomization. It also compares the linear and nonlinear models. More details can be found here https://github.com/hughesevoanth/glsmr. The effects of BMI on leptin levels were further explored using this package. For this analysis the strata were defined as 18.5-25 kg/m^2^ (healthy), 25-30kg/m^2^ (overweight) and 30-40kg/m^2^ (obesity). Similar to Figures \@ref(fig:leptin-lm-GAM) and \@ref(fig:leptin-lm-GAM-MR), Figure \@ref(fig:leptin-glsmr)A and B indicate the observational and MR linear and nonlinear GAMs with the comparison in model fit indicated by the p-values. Figure \@ref(fig:leptin-glsmr)C indicates how as the BMI category increases, the magnitude of the estimate becomes smaller, where the estimate is halved when comparing the obesity group with the healthy BMI group. The estimates also becomes smaller in the MR (Figure \@ref(fig:leptin-glsmr)D)
 
 (ref:leptin-glsmr-cap) Observational and Mendelian randomization estimates for the effect of BMI (kg/m^2^) and leptin (SDs) stratified by BMI category. Shaded areas display the ranges of BMI of each stratum: 18.5-25 (red), 25-30 (blue), 30-40 (green) A) Comparison between the fit of the nonlinear and linear generalized additive models (GAMs) with age and sex as covariables.  B) Comparison between the fit of the nonlinear and linear generalized additive models (GAMs) with age and sex as covariables for the two stage least squares Mendelian randomization (MR) analysis. C) Stratified estimates for the observational association between BMI and leptin (beta is SD change in leptin per 1 kg/m^2^ increase in BMI). D) Stratified estimates for the MR estimates for the effect of BMI on leptin (beta is SD change in leptin per 1 kg/m^2^ increase in BMI). Black indicates the estimate has a p value of >0.05 and red indicates p<0.05. Strata estimates are presented as circles with the estimate for the complete dataset represented by a square.
